# BioNLP-2025

./: .gitignore  README.md  pyproject.toml  run.sh
archehr/: __init__.py  utils.py
archehr/dataset-augmentation/: i2b2_data_extraction.py  main.py  question_generation.py
archehr/embedding-models/: Jina_classifier_colab_notebook.ipynb  cross_encoder.py
archehr/prompting/: compress_answer.py  fewShot.py  main.py  prompt_chaining.py  zeroShot.py
config/: zero-shot-paraphrasing.txt  zero-shot.txt
config/chain-prompting/: 1-gen-answer.txt  2-retrieve-relevant-sentences.txt  3-paraphrase.txt  4-format.txt  5-control-format.txt
config/prompts/: zero-shot-paraphrasing.txt  zero-shot.txt
config/prompts/CoT-prompting/: input-CoT-example-1.txt  input-CoT-example-2.txt  output-CoT-example-1.txt  output-CoT-example-2.txt  system-CoT.txt  user-CoT.txt  zero-shot-CoT.txt
config/prompts/prompt-chaining_v2/: 1-gen-answer.txt  2-retrieve-relevant-sentences.txt  3-paraphrase.txt  4-format.txt  5-control-format.txt
config/prompts/prompt_chaining/: 2-essential_sentences_identification.txt  5-strict_answer_compression.txt  answer_compression.txt  answer_reformulation.txt  free_answer.txt
prompting/: fewShot.py  few_shot.py  utils.py  zeroShot_langchain.py
src/: few_shot.py  main.py  utils.py
